@@ -7,6 +7,9 @@ v0.71.2		16-Jan-2005
 		Changed rfc-2045 name x-mac to mac. Changed x-ibmpc to cp437.
 		This allows rfc mime headers to show official names.
 
+	libdiesel.a:
+		Changed the maximum string length from 2560 to 4096 characters.
+
 	mbcico:
 		Added protection during binkp receive for zero bytes compressed
 		data frames, this will case uncompress error -5 because zero
